# linguistic-data-analysis-II-2026

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: deploy.yml
planning/course_planning/: plan_a.md
sources/: _quarto.yml  index.md
sources/assets/img/: .gitkeep
sources/docs/: index.html  robots.txt  search.json  sitemap.xml
sources/docs/final-project/: index.html
sources/docs/notebooks/: day1_python_and_first_llm.html  day2_gold_standards_and_evaluation.html  day3_prompt_design.html  day4_pipeline_and_sampling.html  day5_project_finalization.html  index.html  tutorial-day2-annotation-eval.html  tutorial-day3-move-replication.html
sources/docs/resources/: index.html
sources/final-project/: index.md
sources/notebooks/: _generate_day_notebooks.py  _metadata.yml  day1_python_and_first_llm.ipynb  day2_gold_standards_and_evaluation.ipynb  day3_prompt_design.ipynb  day4_pipeline_and_sampling.ipynb  day5_project_finalization.ipynb  index.md  tutorial-day2-annotation-eval.md  tutorial-day3-move-replication.md
sources/resources/: index.md
sources/sessions/: index.md  slides-poc.qmd
sources/slides/: _slides.yml  slides-session-02.qmd  slides-session-03.qmd  slides-session-04.qmd  slides-session-05.qmd  slides-session-10.qmd  slides-session-11.qmd  slides-session-12.qmd  slides-session-13.qmd  slides-session1.qmd  slides-session14.qmd  slides-session15.qmd  slides-session3.qmd  slides-session6.qmd  slides-session7.qmd  slides-session8.qmd  slides-session9.qmd
sources/syllabus/: index.md  readings.md  syllabus-style.css
(+206 files in other folders)
